# ternary-dynamics

./: AGENT.md  Cargo.toml  PLUG_AND_PLAY.md  README.md
memory/: JOURNAL.md
src/: critical.rs  dynamic_mode.rs  lib.rs  logger.rs  phase.rs  timeseries.rs  trajectory.rs
