[package]
name = "ternary-dynamics"
version = "0.1.0"
edition = "2021"
description = "Temporal dynamics of ternary agent systems — strategy evolution, phase transitions, and critical points"
license = "MIT"
repository = "https://github.com/SuperInstance/ternary-dynamics"
keywords = ["ternary", "dynamics", "simulation", "agents", "evolution"]
categories = ["science", "simulation"]

[dependencies]
ternary-types = { git = "https://github.com/SuperInstance/ternary-types.git", features = ["std"] }
